Fix post images overflowing

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -77,6 +77,10 @@
     p {
       margin-top: 1.5rem;
       margin-bottom: 1.5rem;
+
+      img {
+        max-width: 100%;
+      }
     }
 
 
